[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brute_tool"
version = "1.0.0"
description = "A universal un-rooted brute forcing suite"
authors = [
  { name="Kobeee4", AI="Gemini" }
]
dependencies = [
  "requests",
]

[project.scripts]
brute-start = "main:menu"
