[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brute_module"
version = "1.0.0"
description = "A universal un-rooted brute forcing suite"
authors = [
  { name="Kobeee4" }
]
dependencies = [
  "requests",
]

[project.scripts]
brute-start = "main:menu"
